[project]
name = "syzm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bindata>=0.12.2",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "numpy>=2.2.3",
    "pygame>=2.6.1",
]
